<resources>
    //section fragments
    <string name="app_name">AndroidAdvancedLearning</string>
    <string name="next_button_text">next</string>
    <string name="go_to_fragments_button">go to fragments</string>

    //section libraries
    <string name="go_to_libraries_button">go to libraries</string>
    <string name="emojify_me">Emojify Me!</string>
    <string name="no_emoji">No Emoji Expression Found</string>
    <string name="delete_success">Images was deleted!</string>
    <string name="delete_failure">Image deletion failed</string>
    <string name="saved_message">Image Saved at %1$s</string>
    <string name="not_saved">Image not saved!</string>
    <string name="error">Error finding image</string>
    <string name="go">GO</string>
    <string name="permission_denied">Permission denied</string>
    <string name="imageview_description">The imageview that contains the emojified picture</string>
    <string name="no_faces_message">No Faces Detected</string>

    //section firebase cloud messaging
    <!-- Menu Strings -->
    <string name="menu_title_following_settings">Following</string>

    <!-- Message and Notification Strings -->
    <string name="notification_message">"New squawk from %1$s"</string>
    <string name="toast_refresh">Refreshing Data</string>
    <string name="message_token_format" translatable="false">InstanceID Token: %s</string>

    <!-- Strings for Following Screen -->
    <string name="follow_key_switch_asser">key_asser</string>
    <string name="follow_key_switch_cezanne">key_cezanne</string>
    <string name="follow_key_switch_jlin">key_jlin</string>
    <string name="follow_key_switch_lyla">key_lyla</string>
    <string name="follow_key_switch_nikita">key_nikita</string>

    <string name="follow_title_switch_asser">Asser</string>
    <string name="follow_title_switch_cezanne">Cezanne</string>
    <string name="follow_title_switch_jlin">Jessica</string>
    <string name="follow_title_switch_lyla">Lyla</string>
    <string name="follow_title_switch_nikita">Nikita</string>

    <string name="follow_summary_not_following">Not Following</string>
    <string name="follow_summary_following">Following</string>
    <string name="go_to_firebase_messages_button_text">go to firebase messages</string>
    <string name="no_desctiption">no desctiption</string>

    //section shushme (places)
    <string name="add_new_location">Add new location</string>
    <string name="location_list">Locations</string>
    <string name="setting_enabled" translatable="false">EnabledSetting</string>
    <string name="settings_label">Settings</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="go_to_places_button_text">go to places</string>
    <string name="enter_name_edittext">enter name</string>
    <string name="add_user_text">add user</string>
    <string name="player_name_hint">enter name</string>
    <string name="number_of_players_joined_text_view">Number of players joined:</string>
    <string name="_0">0</string>
    <string name="go_to_mvp_button_text">go to mvp</string>
    <string name="add_user_button_text">add</string>

    //Espresso
    <!--Activity Toolbar Titles-->
    <string name="menu_title">Menu</string>
    <string name="order_title">Order</string>
    <string name="order_summary_title">Order Summary</string>

    <!--Tea Names-->
    <string name="black_tea_name">Black Tea</string>
    <string name="green_tea_name">Green Tea</string>
    <string name="white_tea_name">White Tea</string>
    <string name="oolong_tea_name">Oolong Tea</string>
    <string name="honey_lemon_tea_name">Honey Lemon Tea</string>
    <string name="chamomile_tea_name">Chamomile Tea</string>


    <!--OrderActivity Form values-->
    <string name="Customizations">Customizations</string>
    <string name="milk_choices">Milk Choices</string>
    <string name="sugar_choices">Sugar Choices</string>
    <string name="quantity">Quantity</string>
    <string name="brew_tea">BREW TEA</string>
    <string name="initial_cost">$0.00</string>
    <string name="initial_quantity_value">0</string>
    <string name="tea_size">Size</string>
    <string name="tea_size_small">Small ($5/cup)</string>
    <string name="tea_size_medium">Medium ($6/cup)</string>
    <string name="tea_size_large">Large ($7/cup)</string>
    <string name="milk_type_none">None</string>
    <string name="milk_type_nonfat">Nonfat Milk</string>
    <string name="milk_type_1_percent">1% Milk</string>
    <string name="milk_type_2_percent">2% Milk</string>
    <string name="milk_type_whole">Whole Milk</string>
    <string name="sweet_type_0">0% - Not Sweet</string>
    <string name="sweet_type_25">25% - Slightly Sweet</string>
    <string name="sweet_type_50">50% - Half Sweet</string>
    <string name="sweet_type_75">75% - Moderately Sweet</string>
    <string name="sweet_type_100">100% - Full Sweetness</string>


    <!--OrderSummaryActivity summary values-->
    <string name="order_summary"/>
    <string name="total">Total</string>
    <string name="summary_tea_label">Tea Type</string>
    <string name="summary_size_label">Size</string>
    <string name="summary_milk_label">Milk Type</string>
    <string name="summary_sugar_label">Sugar Amount</string>
    <string name="summary_total_label">Order Total</string>
    <string name="summary_quantity_label">Quantity</string>


    <!--OrderSummary Email Values-->
    <string name="summary_email_prompt">Let your friends know you just ordered a delicious tea from TeaTime and they can too!</string>
    <string name="send_email">Send Email</string>
    <string name="order_summary_email_subject">Freshly Brewed from TeaTime</string>
    <string name="email_message">I just ordered a delicious tea from TeaTime. Next time you are craving a tea, check them out!</string>


    <!--Loading message-->
    <string name="done_msg">Your tea is ready!</string>
    <string name="go_to_esrpresso_button">go to espresso</string>
    <string name="loading_msg">Loading images</string>
    <string name="go_to_mvvm_button">go to MVVM</string>


    <!--Spinner Options-->
    <string-array name="tea_size_array">
        <item>Small ($5/cup)</item>
        <item>Medium ($6/cup)</item>
        <item>Large ($7/cup)</item>
    </string-array>

    <string-array name="milk_array">
        <item>None</item>
        <item>Nonfat Milk</item>
        <item>1% Milk</item>
        <item>2% Milk</item>
        <item>Whole Milk</item>
    </string-array>

    <string-array name="sugar_array">
        <item>0% - Not Sweet</item>
        <item>25% - Slightly Sweet</item>
        <item>50% - Half Sweet</item>
        <item>75% - Moderately Sweet</item>
        <item>100% - Full Sweetness</item>
    </string-array>
</resources>
