<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpackage.MainActivity">

    <Button
        android:id="@+id/fragments_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_buttons_margin_left"
        android:text="@string/go_to_fragments_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/libraries_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_libraries_button"
        app:layout_constraintLeft_toLeftOf="@+id/fragments_button"
        app:layout_constraintTop_toBottomOf="@+id/fragments_button" />

    <Button
        android:id="@+id/push_messages_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_firebase_messages_button_text"
        app:layout_constraintLeft_toLeftOf="@+id/fragments_button"
        app:layout_constraintTop_toBottomOf="@+id/libraries_button" />

    <Button
        android:id="@+id/places_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_places_button_text"
        app:layout_constraintLeft_toLeftOf="@+id/fragments_button"
        app:layout_constraintTop_toBottomOf="@+id/push_messages_button" />

    <Button
        android:id="@+id/mvp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_mvp_button_text"
        app:layout_constraintLeft_toLeftOf="@+id/fragments_button"
        app:layout_constraintTop_toBottomOf="@+id/places_button" />

</android.support.constraint.ConstraintLayout>