<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <EditText
        android:id="@+id/playerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/player_name_hint"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="text"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/addUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/add_user_button_text"
        app:layout_constraintLeft_toRightOf="@id/playerEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usersJoinedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/player_joined_textview_vertical_margin"
        android:layout_marginHorizontal="@dimen/players_added_textview_horizontal_margin"
        android:layout_marginStart="@dimen/players_added_textview_horizontal_margin"
        android:layout_marginEnd="@dimen/players_added_textview_horizontal_margin"
        android:layout_marginTop="@dimen/player_joined_textview_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/playerEditText"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/userCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/players_added_textview_horizontal_margin"
        android:layout_marginTop="@dimen/player_joined_textview_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/number_of_players_joined_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/playersCountValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/players_added_textview_horizontal_margin"
        android:layout_marginTop="@dimen/player_joined_textview_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/userCountTextView"
        android:text="@string/_0"/>

</android.support.constraint.ConstraintLayout>